@@ -67,8 +67,8 @@ public abstract class FeatureWrapper {
             // Create a new instance of the class:
             T wrapper;
             try {
-                wrapper = clazz.newInstance();
-            } catch (InstantiationException e) {
+                wrapper = clazz.getDeclaredConstructor().newInstance();
+            } catch (Exception e) {
                 throw new InvalidClassException(
                         String.format("Unable instantiate class of type '%s'.", clazz));
             }
