@@ -208,8 +208,8 @@ public class FeatureTypeTest extends DataTestCase {
         // primative
         String str = "FooBar";
         Integer i = Integer.valueOf(3);
-        Float f = new Float(3.14);
-        Double d = new Double(3.14159);
+        Float f = Float.valueOf(3.14f);
+        Double d = Double.valueOf(3.14159);
 
         AttributeTypeBuilder ab = new AttributeTypeBuilder();
 
