@@ -682,12 +682,12 @@ public class VPFFile {
                 break;
 
             case DATA_SHORT_FLOAT:
-                result = new Float(readFloat());
+                result = Float.valueOf(readFloat());
 
                 break;
 
             case DATA_LONG_FLOAT:
-                result = new Double(readDouble());
+                result = Double.valueOf(readDouble());
 
                 break;
 
